codex-rs/tui_app_server/src/bottom_pane/snapshots/codex_tui__bottom_pane__feedback_view__tests__feedback_view_bad_result.snap
---
source: tui/src/bottom_pane/feedback_view.rs
expression: rendered
---
▌ Tell us more (bad result)
▌
▌ (optional) Write a short description to help us further

Press enter to confirm or esc to go back
